fix(align): leaderboard align center

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ aside.sponsored.leaderboard figure .wrapper > a {
   background: url('../images/flaco_High_480.gif');
   background-repeat: no-repeat;
   background-position-y: -150px;
-  background-position-x: -20px;
+  background-position-x: -25px;
   width: 480px;
   margin: auto;
   display: block;
